write two  tests

--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
+  "directories": {
+    "test": "test"
+    },
+    "scripts": {
     "test": "jest"
   },
   "repository": {
